--- a/app/javascript/packs/stylesheets/_custom.scss
+++ b/app/javascript/packs/stylesheets/_custom.scss
@@ -10,3 +10,49 @@
 #logo:hover {
   color: aqua;  
 }
+
+.center {
+ text-align: center; 
+}
+
+.jumbotron {
+  background-image: url('../../../assets/images/ironman.png');
+  background-size: cover;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+}
+
+.btn-xlarge {
+  font-size: 1.7em;
+  background-color: #000;
+}
+
+.footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;  
+}
+
+.footer a:hover {
+  color: #222;
+}
+
+.footer small {
+  float: left;
+}
+
+.footer ul {
+  float: right;
+  list-style: none;
+}
+
+.footer ul li {
+  float: left;
+  margin-left: 15px;
+}
