--- a/app/javascript/packs/stylesheets/_custom.scss
+++ b/app/javascript/packs/stylesheets/_custom.scss
@@ -32,6 +32,11 @@
   background-color: #000;
 }
 
+.article-meta-details {
+  border-top: #eaeaea;
+  margin-top: 15px;
+}
+
 .article-actions {
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
