--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,33 +1,33 @@
 <%= render 'shared/errors', obj: @article %>
 
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-md-12">
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
     <div class="form-group">
-      <div class="control-label col-sm-2">
+      <div class="control-label col-lg-2">
         <%= f.label :title %>
       </div>
-      <div class="col-sm-8">
+      <div class="col-lg-10">
         <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
       </div>
     </div>
     <div class="form-group">
-      <div class="control-label col-sm-2">
+      <div class="control-label col-lg-2">
         <%= f.label :description %>
       </div>
-      <div class="col-sm-8">
+      <div class="col-lg-10">
         <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
       </div>
     </div>
 
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
+      <div class="col-lg-offset-2 col-lg-10">
         <%= f.submit class: "btn btn-primary btn-lg" %>
       </div>
     </div>
 
     <% end %>
-    <div class="col-xs-4 col-xs-offset-5">
+    <div class="col-md-4 col-md-offset-5">
       [<%= link_to "Cancel and return to articles", articles_path %>]
     </div>
   </div>
